# mandlebrot

./: .gitignore  README.md  pyproject.toml
mandlebrot/: __init__.py  app_logging.py  app_settings.py  high_res_app.py  low_res_app.py  process_utils.py  settings.yaml
test/: test_app_build.py
