[tool.poetry]
name = "mandlebrot"
version = "0.1.0"
description = "Mandlebrot set image generation."
authors = ["mikecv <galacticwingcommander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"
poethepoet = "^0.16.5"
dotsi = "^0.0.3"
PyYAML = "^6.0"

[tool.poe.tasks]
isort = "isort --profile google --sl -l 120 --check-only --diff sounder"
black = "black --line-length 120 --check --diff sounder"
lint = "pylint --rcfile=pylintrc -r y sounder"
mypy = "mypy sounder"
pytest = "pytest test --verbose -v -s"
utest = "pytest . --verbose -v"
type_checker = "mypy ."
test_all = ["isort", "black", "mypy", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
low-res-go = "mandlebrot.low_res_app:run"
